# Jacob-s-Portfolio-Vault

./: .gitignore  CONTRIBUTING.md  ENGINE_INTERPLAY.md  FRAMING.md  LANGUAGE_WITHOUT_API.md  LICENSE.md  Mathematical_Compendium.tex  NOTICE.md  OPERATOR_CALCULUS.md  PORTFOLIO_INCORPORATION_PLAN.md  PRIMUS_EXPLORATION.md  README.md  START_HERE.md  UMA_CHIRON_EXPLORATION.md  VAULT_INVENTORY_AND_HCT_GAMEPLAN.md  build_monolith.py
Candor/: README.md  candor.py
Chiron/: ARCHITECTURE.md  ARTIFACTS.md  FORMAL.md  FRAMING.md  GROW.md  LANGUAGE_WITHOUT_API.md  LITERATURE.md  README.md  RUNNING.md  SELF_GROWTH.md  SEMIC.md  WHITEPAPER.md  WHY_CHIRON.md  actionable_intelligence.py  aesthetics.py  apply_license_headers.py  assistant_server.py  axioms.py  bench_authorship.py  bench_compression.py  bench_legal.py  bench_protocol.py  bench_proverbs.py  bench_suite.py  bench_symreg.py  benchmark.py  build.py  build_manifest.py  (+55 more)
Chiron Monolith/: README.md  build_monolith.py  chiron_monolith.py
Chiron-Refined/: ARCHITECTURE.md  GROW.md  KNOWN_LIMITATIONS.md  README.md  aesthetics.py  benchmark.py  candor_bridge.py  chiron.py  chiron_ciphers.py  chiron_grow.py  compare.py  cross_examine.py  dashboard.html  density_emotion.py  discover.py  fastops.py  formal_check.py  govern.py  holographic.py  infectatrum_bridge.py  language.py  mine_code.py  ontological.py  operator_calculus.py  parameters.json  primus_atlas.py  primus_verses.py  projection_stack.py  requirements.txt  significance.py  verify.py
Chiron-Refined/chiron_fastops/: Cargo.toml
Chiron-Refined/chiron_fastops/src/: lib.rs
(+251 files in other folders)
